Bug 834816 - Disconnect all acl connections before disabling Bluetooth, r=qdot